# rabbitmq-alert

./: .bumpversion.cfg  .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
_tests_/: test_apiclient.py  test_argumentsparser.py  test_conditionchecker.py  test_logger.py  test_notifier.py  test_rabbitmqalert.py
_tests_/models/: test_argument.py
dev/: docker-compose.yaml
dev/configs/rabbitmq/: rabbitmq.conf
dev/configs/rmq_alert/: rabbitmq-alert.dev.yaml
docs/: development.md
src/rabbitmqalert/: app.py  checker.py  client.py  config.py  logutils.py  main.py  notifier.py
